Additions to the README file

--- a/README.org
+++ b/README.org
@@ -12,6 +12,8 @@ In the /Calculations folder are various Excel and Matlab files used for calculat
 
 In the /Aspen folder are AspenPLUS files we have used for simulations of the process. Following the .apwz files (aspen files) are in some cases .org documents documenting the process.
 
-Then, there are folders for all the exams of the assignment. The first one was about different ideas for how to approach the process, but since the idea proposed there was not the one we used in the end, the files are not in the repo. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/2nd_exam_files/Sxediasmos_Omada27_Bproodos.pdf][second exam]] includes a lot of information about the process we ended up doing such as reactor desing, which separators should be used and kinetics. It is the fundamentals of the process basically. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Process_Design_Team27_3rd_exam.pdf][third exam]], the focus was mainly on getting the core parts of the process simulated in AspenPLUS. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/4th_exam_files/olive_to_glycerol_cyclopentanone_4th_exam_omada_27.pdf][fourth exam]], we tried to complete the process flow sheet by including everything that we envisioned, to lead up to the first semester's [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/olive_kernel_glycerol_cyclopentanone_omada_27_final.pdf][final exam]] where we structured the whole process using a block diagram concept explained [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/process_blocks.pdf][here]] and in the various files of that folder. The requirements for this was to have a complete working simulation of the base process and to be able to present it in a good way. After this, are the folders for the exams of the second semester. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/5th_exam_files/energy_production_and_integration_5th_exam.pdf][first]] is about energy production in the process as well as energy integration, with a goal of using the minimum energy possible and producing all of it inside the process from the combustion of lignin.
+Then, there are folders for all the exams of the assignment. The first one was about different ideas for how to approach the process, but since the idea proposed there was not the one we used in the end, the files are not in the repo. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/2nd_exam_files/Sxediasmos_Omada27_Bproodos.pdf][second exam]] includes a lot of information about the process we ended up doing such as reactor desing, which separators should be used and kinetics. It is the fundamentals of the process basically. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Process_Design_Team27_3rd_exam.pdf][third exam]], the focus was mainly on getting the core parts of the process simulated in AspenPLUS. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/4th_exam_files/olive_to_glycerol_cyclopentanone_4th_exam_omada_27.pdf][fourth exam]], we tried to complete the process flow sheet by including everything that we envisioned, to lead up to the first semester's [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/olive_kernel_glycerol_cyclopentanone_omada_27_final.pdf][final exam]] where we structured the whole process using a block diagram concept explained [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/process_blocks.pdf][here]] and in the various files of that folder. The requirements for this was to have a complete working simulation of the base process and to be able to present it in a good way. After this, are the folders for the exams of the second semester. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/5th_exam_files/energy_production_and_integration_5th_exam.pdf][first]] is about energy production in the process as well as energy integration, with a goal of using the minimum energy possible and producing all of it inside the process from the combustion of lignin, while the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/6th_exam_files/energy_integration_costing_6th_exam.pdf][second]] attempts to complete the energy integration of the process and gives a first look at the costing. Lastly, there is the second semester's [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_term2_files/process_integration_and_costing_complete_omada27.pdf][final exam]] which shows the complete picture of the process, its integration, the proposed heat exchanger network based on this integration and the complete image of the process costing with important conclusions.
+
+The two final exams were also presented. The presentation files can be found [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_term1_files/presentation_omada_27.pdf][here]] for the first semester and [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_term2_files/process_design_omada27_presentation.pdf][here]] for the second.
 
 A big part of how these were created is in the other files of the repository, from which most of the info was drawn. But these exam files try to take everything researched up to that point and put it together to be presented.
