Adding more things for sensitivity and the final report outline

--- a/LCA/sensitivity_lci.org
+++ b/LCA/sensitivity_lci.org
@@ -53,25 +53,187 @@
 |--------+-------|
 |   0.02 | 0.294 |
 |   0.03 | 0.329 |
-|   0.04 | 0.364 |
+|   0.06 | 0.427 |
 |   0.08 | 0.506 |
 |    0.1 | 0.576 |
 
+#+CAPTION: Αλλαγές στο LCI από την ψύξη της αποστακτικής
+| Ψύξη | Νερό |
+|------+------|
+|  0.5 |  2.5 |
+|    1 |  4.5 |
+|  1.5 |    7 |
+|  2.5 |   12 |
+|    4 |   20 |
+
 * Input πειραμάτων
-| names        | original |  ok_6 |  ok_8 | ok_10 | ok_14 | ok_16 | wat_3 | wat_4 | wat_5 | wat_7 | wat_8 | hex_2 | hex_3 | hex_4 | hex_8 | hex_1 | heat_1.5 | heat_2 | heat_2.5 | heat_3.5 | heat_5 | cool_0.5 | cool_1 | cool_1.5 | cool_2.5 | cool_4 |   h_4 |   h_6 |   h_7 |   h_9 |   h_1 |
+| names        | original |  ok_6 |  ok_8 | ok_10 | ok_14 | ok_16 | wat_3 | wat_4 | wat_5 | wat_7 | wat_8 | hex_2 | hex_3 | hex_6 | hex_8 | hex_1 | heat_1.5 | heat_2 | heat_2.5 | heat_3.5 | heat_5 | cool_0.5 | cool_1 | cool_1.5 | cool_2.5 | cool_4 |   h_4 |   h_6 |   h_7 |   h_9 |   h_1 |
 | olive kernel |    11.69 |     6 |     8 |    10 |    14 |    16 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 |    11.69 |  11.69 |    11.69 |    11.69 |  11.69 |    11.69 |  11.69 |    11.69 |    11.69 |  11.69 | 11.69 | 11.69 | 11.69 | 11.69 | 11.69 |
 | water        |     5.85 |     3 |     4 |     5 |     7 |     8 |     3 |     4 |     5 |     7 |     8 |  5.85 |  5.85 |  5.85 |  5.85 |  5.85 |     5.85 |   5.85 |     5.85 |     5.85 |   5.85 |     5.85 |   5.85 |     5.85 |     5.85 |   5.85 |  5.85 |  5.85 |  5.85 |  5.85 |  5.85 |
-| hexane       |    0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 |  0.02 |  0.03 |  0.04 |  0.08 |   0.1 |    0.044 |  0.044 |    0.044 |    0.044 |  0.044 |    0.044 |  0.044 |    0.044 |    0.044 |  0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 |
+| hexane       |    0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 |  0.02 |  0.03 |  0.06 |  0.08 |   0.1 |    0.044 |  0.044 |    0.044 |    0.044 |  0.044 |    0.044 |  0.044 |    0.044 |    0.044 |  0.044 | 0.044 | 0.044 | 0.044 | 0.044 | 0.044 |
 | heat         |     2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |      1.5 |      2 |      2.5 |      3.5 |      5 |     2.78 |   2.78 |     2.78 |     2.78 |   2.78 |  2.78 |  2.78 |  2.78 |  2.78 |  2.78 |
 | cool         |     1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |     1.93 |   1.93 |     1.93 |     1.93 |   1.93 |      0.5 |      1 |      1.5 |      2.5 |      4 |  1.93 |  1.93 |  1.93 |  1.93 |  1.93 |
 | hydrogen     |    0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 | 0.082 |    0.082 |  0.082 |    0.082 |    0.082 |  0.082 |    0.082 |  0.082 |    0.082 |    0.082 |  0.082 |  0.04 |  0.06 |  0.07 |  0.09 |   0.1 |
 
 * Output πειραμάτων
 
-| names            | original | ok_6 | ok_8 | ok_10 | ok_14 | ok_16 | wat_3 | wat_4 | wat_5 | wat_7 | wat_8 | hex_2 | hex_3 | hex_4 | hex_8 | hex_1 | heat_1.5 | heat_2 | heat_2.5 | heat_3.5 | heat_5 | cool_0.5 | cool_1 | cool_1.5 | cool_2.5 | cool_4 | h_4 | h_6 | h_7 | h_9 | h_1 |
-| carbon footprint |    0.370 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
-| water usage      |    0.017 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
-| human toxicity   |    0.380 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
-| energy demand    |     34.1 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
-| eutrophication   |    0.017 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
-| acidification    |    0.027 |      |      |       |       |       |       |       |       |       |       |       |       |       |       |       |          |        |          |          |        |          |        |          |          |        |     |     |     |     |     |
+| names            | original |  ok_6 |  ok_8 | ok_10 | ok_14 | ok_16 | wat_3 | wat_4 | wat_5 | wat_7 | wat_8 | hex_2 | hex_3 | hex_6 | hex_8 | hex_1 | heat_1.5 | heat_2 | heat_2.5 | heat_3.5 | heat_5 | cool_0.5 | cool_1 | cool_1.5 | cool_2.5 | cool_4 |   h_4 |   h_6 |   h_7 |   h_9 |   h_1 |
+| carbon footprint |    0.370 | 0.283 | 0.312 | 0.343 | 0.402 | 0.433 | 0.345 | 0.353 | 0.361 | 0.377 | 0.386 | 0.349 | 0.358 | 0.385 | 0.403 | 0.421 |    0.366 |  0.368 |    0.370 |    0.373 |  0.378 |    0.368 |  0.369 |    0.369 |    0.371 |  0.374 | 0.299 | 0.333 | 0.350 | 0.384 | 0.401 |
+| water usage      |    0.020 | 0.017 | 0.018 | 0.019 | 0.021 | 0.022 | 0.017 | 0.018 | 0.019 | 0.021 | 0.022 | 0.020 | 0.020 | 0.020 | 0.020 | 0.020 |    0.020 |  0.020 |    0.020 |    0.020 |  0.020 |    0.013 |  0.015 |    0.018 |    0.023 |  0.031 | 0.020 | 0.020 | 0.020 | 0.020 | 0.020 |
+| energy demand    |     34.1 |  23.3 |  26.8 |  30.3 |  37.4 |  40.9 |  24.6 |  27.7 |  30.7 |  36.8 |  39.9 |  32.5 |  33.1 |  35.0 |  36.2 |  37.4 |     32.2 |   32.9 |     33.6 |     35.0 |   37.1 |     34.0 |   34.0 |     34.0 |     34.0 |   34.1 |  31.0 |  32.4 |  33.1 |  34.6 |  35.3 |
+| acidification    |    0.027 | 0.014 | 0.018 | 0.022 | 0.030 | 0.035 | 0.026 | 0.026 | 0.026 | 0.027 |  0.27 | 0.027 | 0.027 | 0.027 | 0.027 | 0.027 |    0.027 |  0.027 |    0.027 |    0.027 |  0.027 |    0.027 |  0.027 |    0.027 |    0.027 |  0.027 | 0.027 | 0.027 | 0.027 | 0.027 | 0.027 |
+| eutrophication   |    0.017 | 0.014 | 0.015 | 0.016 | 0.018 | 0.020 | 0.017 | 0.017 | 0.017 | 0.017 | 0.017 | 0.015 | 0.016 | 0.018 | 0.020 | 0.022 |    0.017 |  0.017 |    0.017 |    0.017 |  0.017 |    0.017 |  0.017 |    0.017 |    0.017 |  0.017 | 0.017 | 0.017 | 0.017 | 0.017 | 0.017 |
+| human toxicity   |    0.380 | 0.228 | 0.279 | 0.328 | 0.429 | 0.480 | 0.290 | 0.319 | 0.349 | 0.408 | 0.437 | 0.363 | 0.370 | 0.392 | 0.407 | 0.422 |    0.363 |  0.370 |    0.376 |    0.390 |  0.410 |    0.379 |  0.379 |    0.380 |    0.381 |  0.382 | 0.379 | 0.379 | 0.380 | 0.381 | 0.381 |
+
+** Συμπεράσματα
+Η μεταβολή του olive kernel και όσον εξαρτώνται άμεσα από αυτό έχει επίδραση σε όλους τους παράγοντες που μετράμε. Το Carbon Footprint, το Energy Demand
+και το Human Toxicity φαίνεται να έχουν πολύ σημαντική μεταβολή ενώ το water usage, το eutrophication potential και το acidification potential μικρότερη.
+
+Η μεταβολή του νερού ανεξάρτητα του olive kernel (η οποία έχει αρκετή αβεβαιότητα λόγω των παραδοχών που έγιναν), έχει επίδραση σε όλους τους παράγοντες εκτός
+από acidification και eutrophication potential. Το water usage είναι πάλι μικρό και το carbon footprint έχει μικρή μεταβολή, αλλά το human toxicity και το energy
+demand έχουν περίπου σημαντική επίδραση όσο και στο παραπάνω.
+
+Το εξάνιο επηρεάζει όλους τους παράγοντες εκτός από water usage και acidification potential. Παρότι είναι σε μικρή ποσότητα (από 0.02 εώς 0.1 kg) η επίδραση του στo
+carbon footprint είναι περίπου όσο σημαντική όσο στο olive kernel. Το Energy demand και το eutrophication potential μεταβάλλονται λίγο ενώ το human toxicitiy έχει
+σχετικά σημαντική μεταβολή.
+
+Η απαίτηση των αποστακτικών σε θερμότητα επηρεάζει προφανώς το energy demand, αλλά επίσης το carbon footprint και το human toxicity. Η μεταβολή του carbon footprint
+είναι μικρή ενώ των άλλων δύο είναι πιο σημαντική.
+
+Η απαίτηση σε ψύξη επηρεάζει κατά κύριο λόγο το water usage καθώς νερό χρησιμοποιείται ως το ψυκτικό. Επηρεάζει επίσης το carbon footprint και το human toxicity, αλλά
+δείχνει να είναι σε αμελητέο βαθμό.
+
+Η απαίτηση του υδρογόνου (παρότι είναι μικρή ποσότητα και θεωρήθηκε μικρότερη αβεβαιότητα από τα παραπάνω) έχει πολύ σημαντική επίδραση στο carbon footprint, μία
+σχετικά σημαντική επίδραση στο energy demand και μία σχεδόν αμελητέα στο human toxicity.
+
+** Range του output
+Με βάση αυτή την αβεβαιότητα στο input, η αβεβαιότητα στο output περιγράφεται με τα εξής ranges:
+
+CF = 0.233-0.433, WU = 0.013-0.031, ED = 23.3-40.9, AP = 0.014-0.035, EP = 0.014-0.022, HT = 0.228-0.480
+
+** Αποτελέσματα γραμμικής παρεμβολής
+Εδώ παρατίθενται τα αποτελέσματα των γραμμικών παρεμβολών που έγιναν (συντελεστές και R^2). Το πρόγραμμα κάνει output και άλλες πληροφορίες (πχ stdev του prediction και των συντελεστών, SSE και ένα t-test στις παραμέτρους).
+*** Carbon Footprint
+CF = 0.0109*OK + 0.0084*W + 0.889*HEX + 0.0034*HEAT + 0.0017*COOL + 1.698*H + 0.0022 με R^2 = 0.987
+
+Αζίξει να σημειωθεί πως ο συντελεστής του εξανίου έχει stdev μόλις μία τάξη μεγέθους κάτω από τον αριθμό (0.056) ενώ τα υπόλοιπα έχουν αρκετά μικρότερο.
+
+*** Water Usage
+WU = -1.66e-7*OK + 0.00102*W + 0.00021*HEX + 1.697e-6*HEAT + 0.00519*COOL - 0.000395*H + 0.00404 με R^2 = 0.998
+
+Αξίζει να σημειωθεί πως συμπεριλαμβάνοντας όρους που δεν έχουν πραγματική επίδραση στο WU, παίρνουμε ένα αποτέλεσμα όπου πολλοί συντελεστές δεν έχουν τόσο νόημα. Παρακάτω αυτό θα διορθωθεί.
+
+*** Energy Demand
+ED = 0.234*OK + 3.117*W + 61.868*HEX + 1.413*HEAT + 0.0235*COOL + 68.867*H + 0.509 με R^2 = 0.989
+
+Παρότι έχει καλό R^2, το μοντέλο αυτό έχει συγκριτικά με τα άλλα σχετικά μεγάλο σφάλμα (5.06). Αυτό αντανακλάται και στις παραμέτρους, όπου οι περισσότερες έχουν deviation μία τάξη μεγέθους μικρότερο από την τιμή και συγκεκριμένα το intercept και το cooling water έχουν deviation μεγαλύτερο από την τιμή τους.
+
+*** Acidification Potential
+Το μοντέλο πετυχαίνει R^2 = 0.296 κάτι που μας οδηγεί στην σκέψη ότι είτε φταίει ότι συμπεριλάβαμε τιμές που δεν έχει νόημα να εξεταστούν ή ότι η συσχέτιση δεν είναι γραμμική. 
+
+*** Eutrophication Potential
+EP = 0.00057*OK + 9.571e-6*W + 0.0847*HEX - 6.01e-6*HEAT + 1.515e-6*COOL + 0.0014*H + 0.0065 με R^2 = 0.966
+
+Η γραμμική συσχέτιση δεν είναι όσο ισχυρή όσο στα άλλα (μάλλον λόγω του εξανίου το οποίο δημιουργεί COD ως απόβλητο του οποίου η μεταβολή δεν είναι πραγματικά γραμμική). Όμως, είναι αποδεκτή ακρίβεια για την μελέτη που θα κάνουμε.
+
+Επίσης, πάλι παρατηρείται το πρόβλημα των συντελεστών που δεν έχουν πραγματική επίδραση στον ευτροφισμό.
+
+*** Human Toxicity
+HT = 0.0106*OK + 0.03*W + 0.749*HEX + 0.0136*HEAT + 0.00088*COOL + 0.0021*H + 0.00654 με R^2 = 0.99
+
+Αξίζει να αναφερθεί πως το intercept, η επίδραση του ψυκτικού και η επίδραση του υδρογόνου έχουν πολύ μεγάλο stdev (μεγαλύτερο από την ίδια την τιμή).
+
+** Βελτίωση των μοντέλων
+Τα παραπάνω μοντέλα υπέθεσαν πως όλες οι μεταβλητές εξόδου επηρεάζονται από κάθε μεταβλητή εισόδου, το οποίο σε ορισμένες περιπτώσεις οδήγησε σε ποιό αναξιόπιστα αποτελέσματα. Για αυτό, μπορούμε να τρέξουμε αυτά τα μοντέλα με μία βελτίωση.
+
+Αυτό δεν επηρεάζει ουσιαστικά το carbon footprint και το human toxicity αφού όλες οι μεταβλητές τα επηρεάζουν είτε λίγο ή πολύ και τα coefficients που βρέθηκαν είναι ικανοποιητικά για να εκφράσουν αυτό. Επίσης το energy demand έχει μία ουσιαστικά αμελητέα επίδραση στο energy demand, αλλά το μοντέλο λειτουργεί καλά ακόμη και να ληφθεί υπόψην αυτή η παράμετρος οπότε δεν χρειάζεται βελτίωση.
+
+Το water usage, eutrophication potential και acidification potential βέβαια, έχουν προβλήματα καθώς έχουν κάποια πολύ μικρά coefficients που μπορούν να αφαιρεθούν.
+
+Για το water usage, το εξάνιο, το heat της αποστακτικής και το υδρογόνο δεν έχουν καμία ουσιαστική επίδραση στο αποτέλεσμα, οπότε μπορούν να αγνοηθούν. Στο προηγούμενο μοντέλο και το olive kernel δείχνει να μην έχει επίδραση (μεγάλη μεταβολή του input οδηγεί σε μικρή στο output) αλλά στην περίπτωση αυτή υπάρχει μία μικρή επίδραση άρα θέλουμε μικρό και όχι μηδενικό coefficient μάλλον.
+
+Το βελτιωμένο μοντέλο εξαρτάται μόνο από την αβεβαιότητα στο νερό του steam explosion και του ψυκτικού νερού. Η εξίσωση είναι
+WU = 0.001*W + 0.00519*COOL + 0.00412 με R^2 = 0.998 και αρκετά μικρό standard error στους συντελεστές.
+
+Για το eutrophication, ουσιαστική επίδραση έχει μόνο το kernel και το εξάνιο ενώ για το acidification το kernel και ελάχιστα το νερό (μάλλον μπορεί να αγνοηθεί).
+
+Για το acidification, με νερό και πυρηνόξυλο ως μεταβλητές, παρατηρείται αύξηση του R^2 σε 0.359. Συνεχίζει να μην έχει νόημα να το περιγράψουμε γραμμικά όμως. Αν αγνοήσουμε και το νερό και γράψουμε την επίδραση μόνο του πυρηνόξυλου προκύπτει μία γραμμική σχέση η οποία έχει πλέον R^2 = 0.994. Η σχέση αυτή είναι η AP = 0.00209*OK + 0.00145.
+
+Για το eutrophication, το τελικό μοντέλο εξαρτάται από την αβεβαιότητα στο πυρηνόξυλο και το εξάνιο με βάση την εξίσωση
+EP = 0.000582*OK + 0.0833*HEX + 0.0067 με R^2 = 0.97 και γενικά καλύτερα αποτελέσματα από αυτό που έβαζε όλες τις παραμέτρους. 
+
+* Ανάλυση ευαισθησίας
+Έχοντας περιγράψει την αβεβαιότητα που θεωρούμε στο input, τρέξαμε τα αντίστοιχα LCA για να δούμε την αβεβαιότητα που θεωρούμε στο output. Παραπάνω αναφέρθηκαν τα ranges των μεταβλητών εξόδου. Έπειτα, έγινε ένα regression για να βρεθεί η συσχέτιση της εισόδου με την έξοδο στην περιοχή που εξετάζουμε. Βρέθηκε πως όλα εκτός από το acidification potential μπορούν να περιγραφούν πολύ καλά από γραμμικές εξισώσεις.
+
+Η ευαισθησία ενός συστήματος στις παραμέτρους του ορίζεται από την μερική παράγωγο του συστήματος ως προς αυτή την παράμετρο. Αυτό συνήθως έχει νόημα μόνο τοπικά επειδή είναι συνάρτηση της ίδιας της παραμέτρου. Για αυτό, υπάρχει η έννοια του global sensitivity analysis το οποίο προσεγγίζει την ολική ευαισθησία. Στην περίπτωση μας όμως, εφόσον μπορούμε να περιγράψουμε ικανοποιητικά τα φαινόμενα με γραμμικές εξισώσεις, η μερική παράγωγος ως προς κάθε μεταβλητή εισόδου δεν εξαρτάται από την τιμή της μεταβλητής καθώς είναι ίση με τον συντελεστή της στην γραμμική εξίσωση. 
+
+Έτσι, μπορούμε να βγάλουμε τα επιθυμητά συμπεράσματα.
+
+** Carbon Footprint
+Για το carbon footprint, βλέπουμε ότι έχει πολύ μεγάλη ευαισθησία στην ποσότητα υδρογόνου (καθώς μιλάμε για γκρι υδρογόνο). Με βάση το αρχικό LCA, είχαμε δει ότι είναι και το βασικότερο hotspot της διεργασίας, παρόλο που είναι σε μικρή ποσότητα. Έτσι, επιβεβαιώνεται ακόμη περισσότερο πως μία διεργασία που θα μπορέσει να έχει λιγότερη απαίτηση σε υδρογόνο θα έχει πολύ θετική επίδραση. Επίσης το carbon footprint είναι αρκετά ευαίσθητο στην ποσότητα του εξανίου. Παρότι δεν φαίνεται ως ένα από τα hot spots, η μείωση του εξανίου επιδρά σημαντικά στο carbon footprint και αντίστοιχα και αν έχει υποεκτιμηθεί, σημαίνει σημαντική υποεκτίμηση του carbon footprint. Ως προς το πυρηνόξυλο, λόγω της πολύ μεγάλης αβεβαιότητας που θεωρούμε, βλέπουμε ότι μπορεί να επηρεάσει σημαντικά το τελικό μας αποτέλεσμα, αλλά από το μοντέλο που προέκυψε βλέπουμε πως το σύστημα δεν είναι πραγματικά πάρα πολύ ευαίσθητο στην μεταβολή αυτή. Οι υπόλοιποι 3 παράγοντες έχουν πολύ μικρή ευαισθησία δείχνοντας ότι θα έπρεπε να μεταβληθούν πάρα πολύ για να επηρεάσουν το carbon footprint.
+
+|                 | Olive Kernel | Hexane | Hydrogen |
+|-----------------+--------------+--------+----------|
+| Αρχική τιμή     |        0.252 |   0.04 |    0.139 |
+| Ευαισθησία      |       0.0109 |  0.889 |    1.698 |
+
+*** Προτάσεις για βελτίωση
+Από τις 6 παραμέτρους που επιλέχθηκαν ως οι πιό πιθανές να αλλάξουν, οι 3 δεν μπορούν να επιφέρουν σημαντική μεταβολή στο CF. Το εξάνιο είναι μία παράμετρο στην οποία είναι πολύ ευαίσθητο το σύστημα, αλλά είναι ήδη σε μικρή ποσότητα οπότε δεν θα διορθώσει μεγάλο κομμάτι του προβλήματος.
+
+Το πυρηνόξυλο και το υδρογόνο μπορούν να συνεισφέρουν σημαντικά. Πιο εύκολο είναι να μειωθεί το αποτύπωμα όσον αφορά το υδρογόνο καθώς έχει πολύ μεγάλη ευαισθησία και ακόμη και μικρές μεταβολές του αλλάζουν το αποτύπωμα. Η μείωση του υδρογόνου μπορεί να μειωθεί αν βελτιωθεί η αντίδραση, αλλά ήδη χρησιμοποιείται κοντά σε στοιχειομετρική ποσότητα οπότε δεν υπάρχει πολύ περιθώριο. Αλλιώς μπορεί να βελτιωθεί μετατοπίζοντας την χρήση υδρογόνου από γκρί υδρογόνο σε άλλα (πχ πράσινο).
+
+Όμως, και το πυρηνόξυλο έχει περιθώριο βελτίωσης. Αρχικά, μπορεί να βελτιωθεί η ανάκτηση ξυλόζης κατά την έκρηξη ατμού, για να υπάρχει περισσότερο διαθέσιμο υπόστρωμα. Έπειτα, να βελτιωθούν οι αποδόσεις των 2 αντιδράσεων μετατροπής (ξυλόζη σε φουρφουράλη και κυκλοπεντανόνη). Όλα αυτά θα οδηγήσουν σε λιγότερο πυρηνόξυλο να απαιτείται για 1 kg κυκλοπεντανόνη.
+
+** Water Usage
+Για το water usage, βλέπουμε ότι υποθέτοντας σταθερή την αναλογία πυρηνόξυλου/νερού για την έκρηξη ατμού, η αβεβαιότητα στην ποσότητα του πυρηνόξυλου (η οποία υποθέσαμε ότι είχε και μεγάλο εύρος) δεν επηρεάζει ουσιαστικά το water usage (επειδή εξαρχης είναι μικρές μεταβολές). Επηρεάζεται κυρίως από την αβεβαιότητα στην σωστή αναλογία πυρηνόξυλου/νερού (η οποία επίσης έχει θεωρηθεί σχετικά υψηλή) και το νερό που χρησιμοποιείται για την ψύξη της αποστακτικής.
+
+|             |   Water | Cooling |
+|-------------+---------+---------|
+| Αρχική τιμή | 5.85e-3 |    5e-3 |
+| Ευαισθησία  |   0.001 |  0.0052 |
+
+Παρόλο που είναι σχετικά παρόμοιες ποσότητες στις συνθήκες που υποθέσαμε, βλέπουμε πως η ευαισθησία στην απαίτηση ψύξης της αποστακτικής είναι 5 φορές μεγαλύτερη. Οπότε, αν θέλουμε να βελτιώσουμε κάτι, είναι καλύτερο να κάνουμε καλύτερες τις αποστακτικές παρά να μειώσουμε την ποσότητα ατμού που χρειάζεται η έκρηξη ατμού.
+
+Βέβαια δεν είναι ιδιαίτερα ευαίσθητο σε αυτά, δείχνοντας ότι χρειάζεται μία μεγάλη αλλαγή για να επηρεάσει σημαντικά το water usage. Ένας άλλος καλός τρόπος να γίνει αυτό θα ήταν με ανακύκλωση νερού, αντί για χρήση φρέσκου.
+
+** Energy Demand
+Το energy demand φαίνεται να είναι και αυτό πολύ ευαίσθητο στην μεταβολή του υδρογόνου και του εξανίου ακολουθούμενα από το νερό του steam explosion, την θερμή παροχή για την αποστακτική, το olive kernel και τέλος το ψυκτικό νερό της αποστακτικής. Αξίζει να σημειωθεί πως υπάρχει και άλλη μία πιθανή αβεβαιότητα εδώ, η οποία είναι η απαίτηση του εργοστασίου σε ηλεκτρική ενέργεια, που δεν έχει γίνει καθόλου assessed εδώ. Το βασικό hot spot δείχνει να είναι η θερμότητα που απαιτείται για τον ατμό του steam explosion, ακολουθούμενη από τα στερεά του πυρηνόξυλου, όμως το υδρογόνο, που είναι και το πιο ευαίσθητο έχει μία σχετικά σημαντική επίδραση.
+
+|             | Olive Kernel | Water |  Hexane | Hydrogen |
+|-------------+--------------+-------+---------+----------|
+| Αρχική Τιμή |        12.22 |  18.5 |    2.70 |     6.18 |
+| Ευαισθησία  |        0.234 | 3.117 | 61.8676 |   68.867 |
+
+Από τα αποτελέσματα, μπορεί εύκολα να βγει το συμπέρασμα ότι η βελτίωση των αποστακτικών δεν επηρεάζει σημαντικά το energy demand, καθώς ήταν εξαρχής χαμηλή ποσότητα και δεν έχει πολύ μεγάλη ευαισθησία. Η έκρηξη ατμού αντιθέτως επηρεάζει πάρα πολύ, καθώς όπως είχαμε δει και στο σχεδιασμό, είναι μία τεράστια θερμή παροχή συγκριτικά με το υπόλοιπο σύστημα. Η μείωση του νερού (είτε επειδή η διεργασία μπορεί να βελτιωθεί για να θέλει λιγότερο πυρηνόξυλο και αναλογικά να μειωθεί το νερό ή απλώς μείωση της αναλογίας) έχει πολύ μεγάλο περιθώριο αλλαγής του συστήματος.
+
+Το υδρογόνο και το εξάνιο έχουν τεράστια ευαισθησία σχετικά με τα άλλα, που δείχνει πως η βελτίωση και αυτών των παραμέτρων μπορεί να παίξει σημαντικό ρόλο, αλλά είναι εξαρχής χαμηλές τιμές οπότε δεν μπορούν να αλλάξουν ριζικά το energy demand.
+
+** Acidification potential
+Το acidification potential εξαρτάται από το olive kernel γραμμικά και ελάχιστα από το νερό της έκρηξης ατμού, αλλά η ευαισθησία του είναι μικρή. Ουσιαστικά αφορά τα NOx που εκλύονται. Μπορεί να βελτιωθεί προφανώς μειώνοντας το πυρηνόξυλο.
+
+** Eutrophication Potential
+Το eutrophication potential είναι εξαρχής σχετικά μικρό αλλά δεν είναι και ιδιαίτερα ευαίσθητο σε αλλαγές στην διεργασία. Εξαρτάται από το πυρηνόξυλό και το εξάνιο αλλά με μικρή ευαισθησία.
+
+|             | Olive Kernel | Hexane |
+|-------------+--------------+--------|
+| Αρχική Τιμή |      6.62e-3 | 8.4e-3 |
+| Ευαισθησία  |      0.00058 | 0.0833 |
+
+Το εξάνιο βλέπουμε πως έχει 2 τάξεις μεγέθους μεγαλύτερη ευαισθησία και λίγο μεγαλύτερη τιμή ευτροφισμού. Παρόλο που το impact αυτό δεν είναι σημαντικό, η βελτίωση του μπορεί να γίνει μειώνοντας το εξάνιο κυρίως.
+
+** Human toxicity
+Τέλος, το human toxicity είναι πολύ ευαίσθητο στην μεταβολή του εξανίου, ακολουθούμενο από το νερό που χρησιμοποιείται στο steam explosion, την θερμή παροχή της αποστακτικής και το πυρηνόξυλο. Τα άλλα 2 δεν φαίνεται να έχουν σημαντική επίδραση. Το hot spot της διεργασίας φαίνεται να είναι η θέρμανση του νερού για το steam explosion με το πυρηνόξυλο να είναι το δεύτερο σημαντικό hot spot.
+
+|             | Olive Kernel | Water | Hexane |   Heat |
+|-------------+--------------+-------+--------+--------|
+| Αρχική Τιμή |        0.234 | 0.175 |  0.033 |  0.037 |
+| Ευαισθησία  |       0.0106 |  0.03 |  0.749 | 0.0136 |
+
+Όπως και σε άλλα impacts, βλέπουμε ότι το σύστημα είναι πολύ ευαίσθητο στη μεταβολή του εξανίου (στην περιοχή που εξετάζουμε), αλλά αυτό δεν συνεισφέρει μεγάλο κομμάτι του συνολικού human toxicity. Αυτό που θα είχε πολύ νόημα να βελτιώσουμε είναι η ποσότητα πυρηνόξυλου που χρησιμοποιείται και το ανάλογο νερό (το οποίο θα θέλαμε να μειώσουμε ιδανικά και την αναλογία του με βάση τα αποτελέσματα) καθώς έχουν το μεγαλύτερο κομμάτι του αρχικού toxicity. 
+
+* Συμπεράσματα
+- Η μείωση της ποσότητας του πυρηνόξυλου θα βοηθήσει σε σχεδόν κάθε impact. Η βασική διεργασία που δύναται να βελτιωθεί είναι η απόδοση από πυρηνόξυλο σε ξυλόζη, κάτι το οποίο στην παρούσα είναι πολύ χαμηλό.
+- Η χρήση λιγότερου νερού από την αρχική εκτίμηση που είχε γίνει κατά την προσομοίωση δείχνει να επιφέρει πολύ θετικά αποτελέσματα σε κάποιους παράγοντες, λόγω της πολύ μεγάλης απαίτησης θερμών παροχών που χρειάζεται για να θερμανθεί το νερό αυτό σε ατμό υψηλής πίεσης.
+- Το σύστημα είναι ιδιαίτερα ευαίσθητο σε μεταβολές του εξανίου, δείχνοντας πως το εξάνιο μπορεί να επιβαρύνει πολύ το σύστημα. Όμως, καθώς η ποσότητα του είναι ήδη αρκετά χαμηλή, δεν υπάρχει μεγάλο περιθώριο βελτίωσης.
+- Οι αποστακτικές που χρησιμοποιούνται για τον καθαρισμό της κυκλοπεντανόνης δεν φαίνεται να επηρεάζουν πολύ αρνητικά το σύστημα. Η βελτίωση τους είναι ο βασικός τρόπος με τον οποίο μπορούμε να μειώσουμε το water usage (συγκριτικά με το νερό στην έκρηξη ατμού), αλλά πέρα από αυτό, δεν θα επιφέρουν πολύ σημαντικές αλλαγές στο σύστημα.
+- Το υδρογόνο παίζει ίσως και τον πιο καθοριστικό ρόλο στο carbon footprint της διεργασίας καθώς αποτελεί σημαντικό μέρος του συνολικού footprint και το σύστημα είναι ιδιαίτερα ευαίσθητο σε αυτό. Η μείωση της ποσότητας του υδρογόνου ή η χρήση πιο "καθαρού" υδρογόνου θα βοηθήσουν αρκετά την διεργασία.
